--- a/package.json
+++ b/package.json
@@ -2,28 +2,23 @@
   "name": "sass-lib",
   "version": "0.3.4",
   "description": "Sass lib",
-
   "devDependencies": {
     "browser-sync": "~2.6.11",
     "del": "~1.1.1",
     "gulp": "gulpjs/gulp.git#4.0",
+    "gulp-bump": "~0.3.0",
     "gulp-sass": "~1.3.3",
     "gulp-sourcemaps": "~1.5.2"
   },
-
   "repository": {
     "type": "git",
     "url": "https://github.com/r-park/sass-lib.git"
   },
-
   "bugs": {
     "url": "https://github.com/r-park/sass-lib/issues"
   },
-
   "homepage": "https://github.com/r-park/sass-lib",
-
   "keywords": [],
-
   "author": "Richard Park",
   "license": "MIT"
 }
