--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "sass-lib",
-  "version": "0.3.9",
+  "version": "0.3.10",
   "description": "Sass lib",
   "devDependencies": {
-    "browser-sync": "~2.6.11",
+    "browser-sync": "~2.7.1",
     "del": "~1.1.1",
     "gulp": "gulpjs/gulp.git#4.0",
     "gulp-bump": "~0.3.0",
-    "gulp-sass": "~1.3.3",
+    "gulp-sass": "~2.0.0",
     "gulp-sourcemaps": "~1.5.2"
   },
   "repository": {
@@ -18,7 +18,13 @@
     "url": "https://github.com/r-park/sass-lib/issues"
   },
   "homepage": "https://github.com/r-park/sass-lib",
-  "keywords": [],
+  "keywords": [
+    "sass",
+    "scss",
+    "mixins",
+    "responsive",
+    "grid"
+  ],
   "author": "Richard Park",
   "license": "MIT"
 }
