--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,14 @@
 {
   "name": "sass-lib",
-  "version": "0.3.10",
+  "version": "0.3.11",
   "description": "Sass lib",
-  "keywords": [],
+  "keywords": [
+    "sass",
+    "scss",
+    "mixins",
+    "responsive",
+    "grid"
+  ],
   "ignore": [
     "**/.*",
     "gulpfile.js",
