--- a/package.json
+++ b/package.json
@@ -2,29 +2,26 @@
   "name": "sass-lib",
   "version": "0.3.13",
   "description": "Sass lib",
-  "devDependencies": {
-    "browser-sync": "~2.7.1",
-    "del": "~1.1.1",
-    "gulp": "gulpjs/gulp.git#4.0",
-    "gulp-bump": "~0.3.0",
-    "gulp-sass": "~2.0.1",
-    "gulp-sourcemaps": "~1.5.2"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/r-park/sass-lib.git"
-  },
-  "bugs": {
-    "url": "https://github.com/r-park/sass-lib/issues"
-  },
   "homepage": "https://github.com/r-park/sass-lib",
+  "repository": "https://github.com/r-park/sass-lib.git",
+
+  "devDependencies": {
+    "browser-sync": "^2.7.3",
+    "del": "^1.2.0",
+    "gulp": "gulpjs/gulp.git#4.0",
+    "gulp-bump": "^0.3.1",
+    "gulp-csslint": "^0.1.5",
+    "gulp-sass": "^2.0.1",
+    "gulp-scss-lint": "^0.2.0",
+    "gulp-sourcemaps": "^1.5.2"
+  },
+
   "keywords": [
+    "css",
     "sass",
     "scss",
-    "mixins",
+    "mixin",
     "responsive",
     "grid"
-  ],
-  "author": "Richard Park",
-  "license": "MIT"
+  ]
 }
