--- a/.npmignore
+++ b/.npmignore
@@ -15,6 +15,8 @@ tmp/
 #---------------------------------
 # Files
 #---------------------------------
+.csslintrc
+.scss-lint.yml
 bower.json
 gulpfile.js
 
