--- a/bower.json
+++ b/bower.json
@@ -1,22 +1,20 @@
 {
   "name": "sass-lib",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "description": "Sass lib",
   "homepage": "https://github.com/r-park/sass-lib",
   "repository": "https://github.com/r-park/sass-lib.git",
   "author": "Richard Park",
   "license": "MIT",
-
   "ignore": [
-    "**/.*",
-    "gulpfile.js",
     "node_modules",
-    "package.json",
     "src",
     "target",
-    "tmp"
+    "tmp",
+    "**/.*",
+    "gulpfile.js",
+    "package.json"
   ],
-
   "keywords": [
     "css",
     "grid",
