--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "sass-lib",
+  "name": "minx",
   "version": "0.4.7",
-  "description": "Sass lib",
-  "homepage": "https://github.com/r-park/sass-lib",
-  "repository": "https://github.com/r-park/sass-lib.git",
+  "description": "Minx",
+  "homepage": "https://github.com/r-park/minx",
+  "repository": "https://github.com/r-park/minx.git",
   "author": "Richard Park",
   "license": "MIT",
   "devDependencies": {
-    "browser-sync": "^2.7.6",
+    "browser-sync": "^2.7.12",
     "del": "^1.2.0",
     "gulp": "gulpjs/gulp.git#4.0",
     "gulp-bump": "^0.3.1",
     "gulp-csslint": "^0.1.5",
     "gulp-sass": "^2.0.1",
-    "gulp-scss-lint": "^0.2.0"
+    "gulp-scss-lint": "^0.2.0",
+    "sass-true": "^2.0.2"
   },
   "keywords": [
     "css",
