--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "repository": "https://github.com/r-park/minx.git",
   "author": "Richard Park",
   "license": "MIT",
+  "scripts": {
+    "coveralls": "gulp coveralls && rm -rf ./tmp",
+    "test": "./node_modules/mocha/bin/mocha -R spec"
+  },
   "devDependencies": {
     "browser-sync": "^2.7.12",
     "del": "^1.2.0",
@@ -14,6 +18,7 @@
     "gulp-csslint": "^0.1.5",
     "gulp-sass": "^2.0.1",
     "gulp-scss-lint": "^0.2.0",
+    "mocha": "^2.2.5",
     "sass-true": "^2.0.2"
   },
   "keywords": [
