--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "gulp": "gulpjs/gulp.git#4.0",
     "gulp-bump": "^0.3.1",
     "gulp-csslint": "^0.1.5",
+    "gulp-mocha": "^2.1.2",
     "gulp-sass": "^2.0.1",
     "gulp-scss-lint": "^0.2.0",
+    "gulp-util": "^3.0.6",
     "mocha": "^2.2.5",
     "sass-true": "^2.0.2"
   },
