--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "test": "./node_modules/mocha/bin/mocha -R spec"
   },
   "devDependencies": {
+    "autoprefixer-core": "^5.2.1",
     "browser-sync": "^2.7.12",
     "del": "^1.2.0",
     "gulp": "gulpjs/gulp.git#4.0",
     "gulp-bump": "^0.3.1",
     "gulp-csslint": "^0.1.5",
     "gulp-mocha": "^2.1.2",
+    "gulp-postcss": "^5.1.9",
     "gulp-sass": "^2.0.1",
     "gulp-scss-lint": "^0.2.0",
     "gulp-util": "^3.0.6",
