chore: misc. updates
- update fontawesome unicode mappings
- update gulp tasks
- update package dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,18 @@
 # Directories
 #---------------------------------
 **/node_modules/
+target/
 tmp/
 
 
 #---------------------------------
 # Extensions
 #---------------------------------
-**/*.{gz,log,rar,tar,zip}
+*.gz
+*.log
+*.rar
+*.tar
+*.zip
 
 
 #---------------------------------
