--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
   "name": "minx",
   "version": "0.4.14",
-  "description": "Minx",
+  "description": "Sassy mixins and utilities",
   "homepage": "https://github.com/r-park/minx",
   "repository": "https://github.com/r-park/minx.git",
-  "author": "Richard Park",
+  "author": {
+    "name": "Richard Park",
+    "email": "objectiv@gmail.com"
+  },
   "license": "MIT",
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha -R spec"
+    "start": "./node_modules/.bin/gulp"
   },
   "devDependencies": {
-    "autoprefixer-core": "^5.2.1",
-    "browser-sync": "^2.7.13",
-    "del": "^1.2.0",
+    "autoprefixer": "~6.2.1",
+    "browser-sync": "~2.10.1",
+    "gulp-csslint": "~0.2.0",
+    "del": "~2.2.0",
     "gulp": "gulpjs/gulp.git#4.0",
-    "gulp-bump": "^0.3.1",
-    "gulp-csslint": "^0.1.5",
-    "gulp-mocha": "^2.1.2",
-    "gulp-postcss": "^5.1.9",
-    "gulp-sass": "^2.0.3",
-    "gulp-scss-lint": "^0.2.0",
-    "gulp-util": "^3.0.6",
-    "mocha": "^2.2.5",
-    "sass-true": "^2.0.2"
+    "gulp-postcss": "~6.0.1",
+    "gulp-sass": "~2.1.1",
+    "gulp-scss-lint": "~0.3.8",
+    "gulp-util": "~3.0.7"
   },
   "keywords": [
     "css",
     "grid",
+    "mixins",
     "responsive",
     "sass",
     "scss"
