--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "gulp": "^4.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "^8.6.3"
+    "autoprefixer": "^8.6.3",
+    "browser-sync": "^2.24.4",
+    "del": "^3.0.0",
+    "gulp-csslint": "^1.0.1",
+    "gulp-postcss": "^7.0.1",
+    "gulp-sass": "^4.0.1",
+    "gulp-scss-lint": "^0.6.1"
   },
   "scripts": {
     "start": "./node_modules/gulp/bin/gulp.js"
@@ -27,5 +33,8 @@
     "url": "https://github.com/renemarcelo/minx/issues"
   },
   "homepage": "https://github.com/renemarcelo/minx#readme",
-  "browserslist": ["last 3 versions", "Firefox ESR"]
+  "browserslist": [
+    "last 3 versions",
+    "Firefox ESR"
+  ]
 }
