--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "gulp-scss-lint": "^0.6.1"
   },
   "scripts": {
-    "start": "./node_modules/gulp/bin/gulp.js"
+    "start": "./node_modules/gulp/bin/gulp.js",
+    "info": "npx browserslist"
   },
   "repository": {
     "type": "git",
